--- a/index.html
+++ b/index.html
@@ -1,67 +1,11 @@
-<!DOCTYPE html>
-<html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Foodies Blog</title>
-    <link
-      rel="stylesheet"
-      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css"
-      integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN"
-      crossorigin="anonymous"
-    />
-    <link rel="stylesheet" href="stylesim.css" />
-    <!-- Your custom styles -->
-  </head>
-  <body>
-    <!-- Header Section -->
-    <header class="bg-dark text-white py-3">
-      <div class="container">
-        <div class="row align-items-center">
-          <div class="col-md-4">
-            <a href="#" class="text-white text-decoration-none">
-              <h1 class="mb-0">Foodies Blog</h1>
-            </a>
-          </div>
-          <div class="col-md-8">
-            <nav class="navbar navbar-expand-md navbar-dark">
-              <button
-                class="navbar-toggler"
-                type="button"
-                data-bs-toggle="collapse"
-                data-bs-target="#navbarNav"
-                aria-controls="navbarNav"
-                aria-expanded="false"
-                aria-label="Toggle navigation"
-              >
-                <span class="navbar-toggler-icon"></span>
-              </button>
-              <div class="collapse navbar-collapse" id="navbarNav">
-                <ul class="navbar-nav ms-auto">
-                  <li class="nav-item">
-                    <a class="nav-link active" href="#">Home</a>
-                  </li>
-                  <li class="nav-item">
-                    <a class="nav-link" href="#">Recipes</a>
-                  </li>
-                  <li class="nav-item">
-                    <a class="nav-link" href="#">About</a>
-                  </li>
-                  <li class="nav-item">
-                    <a class="nav-link" href="#">Contact</a>
-                  </li>
-                </ul>
-              </div>
-            </nav>
-          </div>
-        </div>
-      </div>
-    </header>
+<script>
+  function deletePost(postid) {
+    if (confirm('Are you sure you want to delete this post?')) {
+      fetch('post/${postid}', { method: 'DELETE' }).then(response => {
+        if (response.ok) window.location.href = '/';
+        else alert("failed to delete");
+      });
 
-    <script
-      src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
-      integrity="sha384-pZ/2kBfdZO5As1FiYj5I/nmZfP7mKbOCSc36aIGxL+LOHj1+y4OR8gB2IOLjFZjCF"
-      crossorigin="anonymous"
-    ></script>
-  </body>
-</html>
+    }
+  }
+</script>
